2002-01-18  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-mdi.c: update plugins UI when needed

	* gedit-plugin.h: cleaned a bit

	* gedit-plugins-engine.[ch]: implemented the plugin engine

	* gedit2.c (main): initialize the plugin engine
	
2002-01-18  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c:  Fixed some little problems
	with auto-save

	* gedit2.c: removed plugin initialization

2002-01-17  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-document.c:  Added support for auto-save.
	(gedit_document_auto_save_timeout): New function
	(gedit_document_auto_save): ditto
	(gedit_document_save): reset auto save timer (if needed)
	(gedit_document_load): start auto save timer (if needed)
	(gedit_document_finalize): remove auto save timer

	* dialogs/gedit-preferences.glade2: made the auto save widgets
	sensitive.

2002-01-17  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.[ch] (gedit_document_insert_text_at_cursor):
	new function

	* gedit2.[ch] (gedit_get_top_windows): new function
	(gedit_get_ui_component_from_window): ditto

	* gedit-ui.xml: added a lot of new placeholders

2002-01-16  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am: defined GEDIT_LOCALEDIR

	[Added a +<lnum> option (like vi)] Thanks to James Willcox 
	for his work on it

	[Started implemetation of plugin support]

	* gedit-plugin.h: new file

	* gedit-plugins-engine.[ch]: ditto

	[Fixed some bug with notebook labels in bonobo-mdi]
	
2002-01-15  Paolo Maggi  <maggi@athena.polito.it>
	
	* gedit-utils.h (gedit_text_iter_forward_search): new prototype

	* gedit-utils.c (gedit_text_iter_forward_search): new experimental
	function to perform case insensitive search (beside normal case
	sensitive search)
	(g_utf8_strcasestr): new private function
	(g_uft8_caselessnmatch): ditto
	(forward_chars_with_skipping): ditto
	(lines_match): ditto
	(strbreakup): ditto

	* gedit-document.c (gedit_document_find): enabled support for