@@ -1,3 +1,9 @@
+2002-01-20  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-plugins-engine.c (gedit_plugins_engine_load):
+	load "configure", "save_settings", "update_ui" and "destroy"
+	symbols
+
 2002-01-18  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-mdi.c: update plugins UI when needed
